refactor: rename artist profiles to service provider
